# SYManage

./: .gitignore  CLAUDE.md  README.md  start_dev.bat
.claude/: current-phase.md
backend/: .env.example  check_test_data.py  pyproject.toml  seed_test_data.py
backend/alembic/: env.py
backend/alembic/versions/: 45e6003a255d_create_users_and_whitelist_tables.py  61488e8153ea_init_finance_table.py  70673b2e2593_add_bar_manager_and_tea_manager_to_.py  72389014ff9d_add_finance_manager_permission.py  841fac5f95e0_add_timezone_to_datetime_columns.py  de43d891bb82_add_working_year_to_whitelist.py  efff7fea5799_update_whitelist.py  f3fca0d35e89_init_all_tables.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/finance/: model.py  router.py  schema.py  service.py
backend/app/users/: model.py  router.py  schema.py  security.py  service.py
backend/symanage_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json
frontend/src/: App.tsx  api.ts  main.tsx  types.ts
frontend/src/api/: UserManage_api.ts  api.ts  common_api.ts  finance_api.ts
frontend/src/components/: RequireAuth.tsx  UserCard.tsx  something_to_be_continue.md
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AddWhitelistModal.tsx  HandoverModal.tsx  LoginForm.tsx  LoginPage.tsx  NavPage.tsx  RegisterPage.tsx  UserManagePage.tsx
frontend/src/pages/finance/: FinancePage.tsx
frontend/src/pages/users/: AddWhitelistModal.tsx  HandoverModal.tsx  LoginForm.tsx  RegisterPage.tsx  UserManagePage.tsx
