[project]
name = "symanage-backend"
version = "0.1.0"
description = "Backend for SYManage club management system"
requires-python = ">=3.11"

dependencies = [
    "alembic>=1.16.0",
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10.0",
    "pwdlib[argon2]>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]
namespaces = true

